@@ -82,14 +82,6 @@ EXTRA_DIST = \
 	.travis/osx-prepare.sh \
 	appveyor.yml \
 	boot.sh \
-	build-aux/cccl \
-	build-aux/cksum-schema-check \
-	build-aux/calculate-schema-cksum \
-	build-aux/dist-docs \
-	build-aux/dpdkstrip.py \
-	build-aux/sodepends.py \
-	build-aux/soexpand.py \
-	build-aux/xml2nroff \
 	poc/builders/Vagrantfile \
 	poc/playbook-centos-builder.yml \
 	poc/playbook-ubuntu-builder.yml \
